# HarnessHub

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: commands.md  file_index.md  live_inventory.json
artifacts/prompts/: answer_with_notable_web_sources.md  autonomous_execution_loop.md  create_github_execution_issues.md  create_jira_execution_tickets.md  create_linear_execution_tickets.md  create_master_prompts.md  create_tickets.md  highest_form_of_leverage.md  hybrid_academic_and_web_research.md  implement_and_critique_solutions.md  mission_driven.md  parallel_problem_decomposition.md  phased_code_review.md  principal_software_engineer_design_patterns.md  registry.json  research_with_arxiv_papers.md  research_with_hugging_face_hub_pages.md  research_with_hugging_face_papers.md  spawn_specialized_subagents.md  surgical_bugfix.md
docs/: agent-runtime.md  context-window-tools.md  dynamic-tool-selection.md  gcloud.md  leads-agent.md  linkedin-agent.md  master-prompt-session-injection.md  output-sinks.md  tools.md  toolset.md
harnessiq/: __init__.py
harnessiq/agents/: __init__.py  base.py  email.py  helpers.py  linkedin.py  sdk_helpers.py  subcalls.py
harnessiq/cli/: __init__.py  __main__.py  _langsmith.py  common.py  interactive.py  main.py  platform_adapters.py  platform_commands.py
harnessiq/config/: __init__.py  credentials.py  harness_profiles.py  loader.py  model_profiles.py  models.py  provider_credentials.py  sdk.py
harnessiq/shared/: arxiv.py  (+64 more)
memory/: agent_instances.json
scripts/: generate_prompt_registry.py  sync_repo_docs.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_agent_instances.py  test_agent_models.py  test_agents.py  test_agents_base.py  test_agents_cli.py  test_anthropic_provider.py  test_apollo_agent.py  test_apollo_provider.py  test_arcads_provider.py  test_arxiv_provider.py  test_attio_provider.py  test_browser_use_provider.py  test_cli_builders.py  test_cli_common.py  test_cli_environment.py  test_cli_policy_options.py  test_cli_runners.py  test_cli_skill_docs.py  test_config_cli.py  test_config_loader.py  test_context_compaction_tools.py  test_context_window_tools.py  test_coresignal_provider.py  test_creatify_provider.py  test_credentials_config.py  test_docs_sync.py  test_email_agent.py  test_email_campaign_agent.py  test_email_campaign_shared.py  test_email_cli.py  test_embedding_integrations.py  test_evaluations.py  test_exa_agent.py  test_exa_outreach_agent.py  test_exa_outreach_cli.py  test_exa_outreach_shared.py  test_exa_provider.py  test_expandi_provider.py  (+101 more)
(+1571 files in other folders)
